infrastructure/k8s/id-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: id-frontend
  labels:
    app: id-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: id-frontend
  template:
    metadata:
      labels:
        app: id-frontend
    spec:
      containers:
      - name: id-frontend
        image: 162173573602.dkr.ecr.ap-northeast-1.amazonaws.com/id-frontend
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: id-frontend
spec:
  selector:
    app: id-frontend
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: id-frontend
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: id.santelos.com
    http:
      paths:
      - path: /(.*)
        pathType: Prefix
        backend:
          service:
            name: id-frontend
            port:
              number: 80
